# document-classifier

./: .gitignore  README.md  insurance_doc_classifier.py  pyproject.toml
dataset/: pyproject.toml
